plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
}

version = mod_version
group = "net.per"

def mod_id = "elixir"

repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven { url "https://maven.shedaniel.me/" }
    exclusiveContent {
        forRepository {
            maven { url = 'https://api.modrinth.com/maven' }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
}

dependencies {
    api "me.shedaniel.cloth:cloth-config-neoforge:15.0.140"
    runtimeOnly "maven.modrinth:architectury-api:13.0.8+neoforge"
    runtimeOnly "maven.modrinth:rei:16.0.799+neoforge"
    runtimeOnly "maven.modrinth:jade:15.10.5+neoforge"
}

processResources {
    filesMatching("META-INF/neoforge.mods.toml") {
        expand "version": project.mod_version, "neoforge_version": project.neo_version
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
